# c-ttml-trans-tool

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LangSelectDialog.cpp  LangSelectDialog.ui  LyricLineASS.cpp  LyricLineCore.cpp  LyricLineKRC.cpp  LyricLineLRC.cpp  LyricLineLYS.cpp  LyricLineQRC.cpp  LyricLineSPL.cpp  LyricLineTTML.cpp  LyricLineYRC.cpp  LyricObject.h  LyricObjectASS.cpp  LyricObjectCore.cpp  LyricObjectKRC.cpp  LyricObjectLRC.cpp  LyricObjectLYS.cpp  LyricObjectQRC.cpp  LyricObjectSPL.cpp  LyricObjectTTML.cpp  LyricObjectYRC.cpp  LyricSylASS.cpp  LyricSylCore.cpp  LyricSylKRC.cpp  LyricSylQRC.cpp  LyricSylSPL.cpp  LyricSylTTML.cpp  LyricSylYRC.cpp  LyricTime.cpp  LyricTime.h  README.md  badge.json  ferrous_opencc.dll.lib  lyric.cpp  lyric.h  lyricline.cpp  lyricline.h  (+24 more)
resources/: res.qrc
src/dialogs/: CMakeLists.txt  LangSelectDialog.cpp  LangSelectDialog.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  TimeFormatDialog.cpp  TimeFormatDialog.hpp  TimeFormatDialog.ui
src/lyric/: CMakeLists.txt
src/lyric/lyric_line/: LyricLine.hpp  LyricLineASS.cpp  LyricLineCore.cpp  LyricLineKRC.cpp  LyricLineLYS.cpp  LyricLineQRC.cpp  LyricLineSPL.cpp  LyricLineTTML.cpp  LyricLineYRC.cpp
src/lyric/lyric_object/: LyricObject.hpp  LyricObjectASS.cpp  LyricObjectCore.cpp  LyricObjectKRC.cpp  LyricObjectLRC.cpp  LyricObjectLYS.cpp  LyricObjectQRC.cpp  LyricObjectSPL.cpp  LyricObjectTTML.cpp  LyricObjectYRC.cpp
src/lyric/lyric_syl/: LyricSyl.hpp  LyricSylASS.cpp  LyricSylCore.cpp  LyricSylTTML.cpp
src/lyric/lyric_time/: LyricTime.cpp  LyricTime.hpp
src/lyric/utils/: utils.cpp  utils.hpp
src/widgets/: CMakeLists.txt  MPlainTextEdit.cpp  MPlainTextEdit.hpp
